# fluvio-connectors

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  bors.toml  start.sh
.github/workflows/: ci.yml  docker-builder.yml  release.yaml  rust-builder.yml
actions/: kd3-check.sh  llvm.sh  zig-install.sh
build-scripts/: aarch64-linux-musl-zig-c++  ld.lld  ld64.lld  metadata.sh  x86_64-linux-musl-zig-c++
build-scripts/docker/: Dockerfile  build-connector-image.sh  build.sh
common/: Cargo.toml
common/src/: lib.rs
connectors-manager/: Cargo.toml
connectors-manager/src/: config.rs  error.rs  list.rs  main.rs  start.rs  stop.rs
connectors-manager/src/group/: create.rs  delete.rs  list.rs  mod.rs
container-build/: .gitignore  Dockerfile
crates/connector-common/: Cargo.toml  README.md
crates/connector-model-postgres/: Cargo.toml
crates/connector-model-sql/: Cargo.toml  README.md
crates/connector-run/: Cargo.toml
crates/connector-sink-dynamodb/: Cargo.toml
crates/connector-sink-postgres/: CHANGELOG.md  Cargo.toml  Makefile
crates/connector-sink-slack/: Cargo.toml  README.md
crates/connector-source-http/: CHANGELOG.md  Cargo.toml
crates/connector-source-kafka/: Cargo.toml
crates/connector-source-mqtt/: Cargo.toml  IMAGE_NAME  README.md  connector.toml
crates/connector-source-postgres/: .env.dev  (+2 more)
crates/smartmodule-json-sql/: Cargo.toml  README.md
crates/smartmodule-json-sql/hub/: package-meta.yaml
crates/smartmodule-json-sql/src/: lib.rs  mapping.rs  transform.rs
mqtt/: Cargo.toml
mqtt/src/: error.rs  main.rs
rust-connectors/common/: Cargo.toml  build.rs
rust-connectors/common/src/: config.rs  error.rs  lib.rs  metrics.rs  monitoring.rs  opt.rs
rust-connectors/common/test-data/connectors/: full-config.yaml  with_transform.yaml  with_transform_many.yaml
rust-connectors/connector-sink-kafka/: Cargo.toml  README.md
rust-connectors/connector-sink-kafka/src/: main.rs
rust-connectors/models/fluvio-model-sql/: Cargo.toml
rust-connectors/models/fluvio-model-sql/src/: lib.rs
rust-connectors/sinks/dynamodb/: CHANGELOG.md  Cargo.toml  Makefile  README.md
rust-connectors/sinks/dynamodb/src/: main.rs
rust-connectors/sinks/kafka/: CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose.yml
rust-connectors/sinks/kafka/src/: main.rs
rust-connectors/sinks/postgres/: CHANGELOG.md  Cargo.toml  Makefile  README.md
rust-connectors/sinks/postgres/src/: connect.rs  lib.rs  main.rs  opt.rs
rust-connectors/sinks/postgres/tests/: data.sql  simple.rs
rust-connectors/sinks/prometheus-push/: Cargo.toml
rust-connectors/sinks/prometheus-push/src/: main.rs
rust-connectors/sinks/sql/: CHANGELOG.md  Cargo.toml  Makefile  README.md  example-connector-config.yaml
rust-connectors/sinks/sql/src/: db.rs  download.rs  lib.rs  main.rs  opt.rs  transform.rs
rust-connectors/sinks/sql/tests/: simple.bats
rust-connectors/sources/github/: Cargo.toml
rust-connectors/sources/github/src/: lib.rs
rust-connectors/sources/hello-fluvio/: Cargo.toml  README.md
rust-connectors/sources/hello-fluvio/src/: produce.rs
rust-connectors/sources/hello-fluvio/tests/: simple.bats
rust-connectors/sources/http/: CHANGELOG.md  Cargo.toml  Makefile  README.md  examp.yaml
rust-connectors/sources/http-json/: Cargo.toml  examp.yaml
rust-connectors/sources/http-json/src/: main.rs
rust-connectors/sources/http-json/tests/: get-smartstream-config.yaml  get-smartstream-test.bats  get-test-config.yaml  get-test.bats  post-test-config.yaml  test-config.yaml
rust-connectors/sources/http/src/: error.rs  formatter.rs  lib.rs  main.rs
rust-connectors/sources/http/src/formatter/: from_reqwest.rs  to_json.rs
rust-connectors/sources/http/tests/: cats.yaml  get-smartstream-config.yaml  get-smartstream-test.bats  get-test-config.yaml  get-test-full-config.yaml  get-test-full-json-config.yaml  get-test-full-json.bats  get-test-full.bats  get-test-json-config.yaml  get-test-json.bats  get-test.bats  get-time-test-config.yaml  get-time-test.bats  get-time-test.yaml  post-test-config.yaml  post-test.bats
rust-connectors/sources/mqtt/: CHANGELOG.md  Cargo.toml  Makefile  README.md
rust-connectors/sources/mqtt/src/: error.rs  formatter.rs  main.rs  opt.rs
rust-connectors/sources/mqtt/tests/: simple.bats  test-config.yaml
rust-connectors/sources/postgres/: .env.dev  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.yml  connect.yml  postgres.conf  postgres.yml
rust-connectors/sources/postgres/src/: connect.rs  convert.rs  error.rs  lib.rs  model.rs
rust-connectors/sources/postgres/tests/: .gitignore  connect.yml  postgres-map.yml  simple.bats  simple.rs  simple.yml  tests.bats
rust-connectors/sources/syslog/: Cargo.toml
rust-connectors/sources/syslog/src/: config.rs  consume.rs  error.rs  main.rs  produce.rs
rust-connectors/utils/connector-deploy/: Cargo.toml
rust-connectors/utils/connector-deploy/src/: local.rs  main.rs
rust-connectors/utils/connector-run/: Cargo.toml
rust-connectors/utils/connector-run/src/: apply.rs  local.rs  main.rs
rust-connectors/utils/fluvio-postgres-map/: Cargo.toml  README.md
rust-connectors/utils/fluvio-postgres-map/src/: lib.rs
rust-connectors/utils/memory-benchmarks/: Cargo.toml
rust-connectors/utils/memory-benchmarks/src/: main.rs
rust-connectors/utils/test-connector/: Cargo.toml  Makefile  connector.json  connector.yaml
rust-connectors/utils/test-connector/src/: main.rs  opts.rs  produce.rs
rust-connectors/utils/test-connector/tests/: batch-size-test-config.yaml  batch-size-test.bats  connector-deployment.yaml  fluvio-test.bats  gzip-test-config.yaml  gzip-test.bats  linger-test-config.yaml  linger-test.bats  simple-test-config.yaml  simple.bats  test-config.yaml  test-mode-config.yaml
smartmodules/mqtt-json/: Cargo.toml
smartmodules/mqtt-json/hub/: package-meta.yaml
smartmodules/mqtt-json/src/: lib.rs
syslog/: Cargo.toml
syslog/src/: config.rs  error.rs  main.rs  produce.rs
test-connector/: Cargo.toml  config.yaml
test-connector/src/: main.rs  opts.rs
(+155 files in other folders)
