[workspace]
members = [
    "crates/connector-common",
    "crates/connector-source-syslog",
    "crates/connector-source-mqtt",
    "crates/connector-source-http",
    "crates/connector-source-postgres",
    "crates/connector-source-kafka",
    "crates/connector-sink-postgres",
    "crates/connector-sink-slack",
    "crates/connector-sink-dynamodb",
    "crates/connector-sink-kafka",
    "crates/connector-sink-sql",
    "crates/connector-model-postgres",
    "crates/connector-model-sql",
    "crates/http-json-mock",
    "crates/connector-run",
    "crates/connector-test",
    "crates/fluvio-smartstream-map/",
    "crates/smartmodule-json-sql",
    "crates/smartmodule-jolt",
    "examples/github-stars/github-stars-smartmodule-map/",
    "examples/github-stars/slack-display-smartmodule-map/",
]
resolver = "2"

[patch.crates-io]
fluvio-smartmodule = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-smartengine = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-protocol = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-spu-schema = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-sc-schema = { git = "https://github.com/infinyon/fluvio", branch = "master" }

sasl2-sys = { git = "https://github.com/infinyon/rust-sasl/", branch = "fix-cross-compiling" }
krb5-src = { git = "https://github.com/infinyon/rust-krb5-src", branch = "fix-cross-compiling" }

[profile.release-lto]
inherits = "release"
lto = true
