[workspace]
members = [
    "rust-connectors/common",
    "rust-connectors/sources/syslog",
    "rust-connectors/sources/mqtt",
    "rust-connectors/sources/http",
    "rust-connectors/sources/postgres",
    "rust-connectors/sources/kafka",
    "rust-connectors/sinks/postgres",
    "rust-connectors/sinks/slack",
    "rust-connectors/sinks/dynamodb/",
    "rust-connectors/sinks/kafka",
    "rust-connectors/sinks/sql",
    "rust-connectors/models/fluvio-model-postgres",
    "rust-connectors/models/fluvio-model-sql",
    "rust-connectors/utils/mocks/http-json-mock/",
    "rust-connectors/utils/connector-run",
    "rust-connectors/utils/test-connector",
    "rust-connectors/utils/fluvio-smartstream-map/",
    "smartmodules/json-sql",
    "smartmodules/jolt",
    "examples/github-stars/github-stars-smartmodule-map/",
    "examples/github-stars/slack-display-smartmodule-map/",
]
resolver = "2"

[workspace.dependencies]
fluvio             = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-smartmodule = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-smartengine = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-protocol    = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-spu-schema  = { git = "https://github.com/infinyon/fluvio", branch = "master" }
fluvio-sc-schema   = { git = "https://github.com/infinyon/fluvio", branch = "master"}

[patch.crates-io]
sasl2-sys          = { git = "https://github.com/infinyon/rust-sasl/", branch = "fix-cross-compiling" }
krb5-src           = { git = "https://github.com/infinyon/rust-krb5-src", branch = "fix-cross-compiling" }

[profile.release-lto]
inherits = "release"
lto = true
