[package]
name = "mqtt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.9.1", features = ["vendored-ssl"] }
fluvio = "0.9.6"
fluvio-future = { version = "0.3.9", features = ["subscriber"] }
thiserror = "1.0.29"
async-std = { version = "1.10.0", features = ["attributes"] }
