[package]
name = "mqtt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluvio = "0.9.6"
fluvio-future = { version = "0.3.9", features = ["subscriber"] }
thiserror = "1.0.29"
async-std = { version = "1.10.0", features = ["attributes"] }
structopt = "0.3.23"

schemars = "0.8.6"
serde_json = "1.0.68"

paho-mqtt = { version = "0.9.1", features = ["vendored-ssl"] }
#paho-mqtt = { path = "../../paho.mqtt.rust/", features = ["vendored-ssl"] }
