[package]
name = "fluvio-syslog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syslog_loose = "0.10.0"
structopt = "0.3"
fluvio = "0.8.4"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["macros", "rt", ] }
notify = "5.0.0-pre.10"
futures-util = "0.3.15"
cfg-if = "1.0.0"
futures = "0.3"
