[package]
name = "fluvio-connectors-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/fluvio-connectors"
description = "The common-utils crate to use when building a fluvio connector in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opt"]
sink = ["fluvio-spu-schema", "opt"]
source = ["fluvio-spu-schema", "opt"]
opt = ["fluvio/smartengine"]

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
structopt = "0.3"

anyhow = "1.0.56"
fluvio-future = { version = "0.4.1", features = ["subscriber"] }
fluvio = { version = "0.13" }
flate2 = { version = "1.0" }
tokio-stream = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
humantime = "2.1.0"
bytesize = "1.1.0"
thiserror = "1.0.31"
fluvio-spu-schema = { version = "0.10.0", optional = true, default-features = false }
serde_yaml = "0.8.18"
humantime-serde = "1.1.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
