[package]
name = "fluvio-connectors-common"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/fluvio-connectors"
description = "The common-utils crate to use when building a fluvio connector in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opt"]
sink = ["fluvio-spu-schema", "opt", "fluvio-smartengine"]
source = ["fluvio-spu-schema", "opt", "fluvio-smartengine"]
opt = ["fluvio/smartengine"]

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
futures-util = { version = "0.3.5", features = ["sink"] }
clap = { version = "3.1", features = ["std", "derive"], default-features = false }
anyhow = "1.0.56"
flate2 = { version = "1.0" }
tokio-stream = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
humantime = "2.1.0"
bytesize = "1.1.0"
thiserror = "1.0.31"
serde_yaml = "0.8.18"
humantime-serde = "1.1.1"
async-net = "1.7.0"

fluvio-future = { version = "0.4.1", features = ["subscriber"] }
fluvio = { version = "0.15.0" }
fluvio-smartmodule = { version = "0.3" }
fluvio-smartengine = { version = "0.5", optional = true}
fluvio-protocol = { version = "0.8" }
fluvio-spu-schema = { version = "0.10.0", optional = true, default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
