[package]
name = "fluvio-connectors-common"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/fluvio-connectors"
description = "The common-utils crate to use when building a fluvio connector in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
sink = [] 
source = ["fluvio/smartengine"]

[dependencies]
anyhow = "1.0.56"
async-net = "1.7.0"
bytesize = "1.1.0"
clap = { version = "3.1", features = ["std", "derive"], default-features = false }
flate2 = { version = "1.0" }
futures-util = { version = "0.3.5", features = ["sink"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
schemars = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.8.18"
tokio-stream = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.31"
tracing = "0.1.37"

fluvio-future = { version = "0.4.1", features = ["subscriber"] }
fluvio = { version = "0.15.0" }
fluvio-smartengine = { version = "0.5", default-features = false, features = ["transformation"]}
fluvio-protocol = { version = "0.8" }
fluvio-sc-schema = { version = "0.15.1"}

[dev-dependencies]
pretty_assertions = "1.3.0"
