[package]
name = "connector-sink-kafka"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluvio-connectors-common = { path = "../../common", features = ["sink"]}
anyhow = "1.0.56"
schemars = { version = "0.8", features = ["url"] }
clap = { version = "3.1", features = ["std", "derive", "env"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

serde = "1"
tokio-stream = "0.1"
fluvio-future = { version = "0.4.1", features = ["subscriber"] }

# There is some difference between rev v0.26.0 and the 0.26.0 on crates.io.
# Changing it to use the crates.io version breaks the musl cross compile.
rdkafka = { git="https://github.com/fede1024/rust-rdkafka", rev="v0.26.0", features = ["cmake-build", "libz-static", "tokio", "ssl-vendored" , "gssapi-vendored"], default-features = false  }
tempfile = "3.3.0"
