[package]
name = "mqtt-json"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "MQTT to JSON transformation SmartModule"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
fluvio-smartmodule = { version = "0.4" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }