[package]
name = "fluvio-model-sql"
version = "0.0.1"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"] }