[package]
name = "dynamodb-sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluvio-connectors-common = { path = "../../common" }
anyhow = "1.0.56"
schemars = { version = "0.8", features = ["url"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

tokio-stream = "0.1"
fluvio-future = { version = "0.3.15", features = ["subscriber"] }

aws-sdk-dynamodb = "0.9.0"
aws-config = "0.12.0"
