[package]
name = "kafka-sink"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluvio-connectors-common = { path = "../../common", features = ["sink"]}
anyhow = "1.0.56"
schemars = { version = "0.8", features = ["url"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

serde = "1"
tokio-stream = "0.1"
fluvio-future = { version = "0.3.15", features = ["subscriber"] }

rdkafka = { version = "0.28", features = ["cmake-build"] }
kafka = "0.9.0"
