[package]
name = "postgres-sink"
version = "0.3.1"
edition = "2021"

[dependencies]
tracing = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
fluvio = { version = "0.15" }
fluvio-future = { version = "0.4", features = ["subscriber"] }
fluvio-connectors-common = { path = "../../common", features = ["sink"]}
fluvio-model-postgres = { path = "../../models/fluvio-model-postgres" }
bytes = "1"
eyre = "0.6"
thiserror = "1"
clap = { version = "3.1", features = ["std", "derive", "env"], default-features = false }
dotenv = "0.15"
url = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["url"] }
once_cell = "1"
color-backtrace = { version = "0.5" }
postgres-types = "0.2.2"

# TODO: Remove these
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "mz-0.7.2" }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "mz-0.7.2" }

[dev-dependencies]
postgres-source = { path = "../../sources/postgres" }
fluvio-future = { version = "0.4.1", features = ["fixture"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
