[package]
name = "fluvio-connector-prometheus-push"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = "0.11"
fluvio = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["url"] }
url = "2.2"
prometheus-data = { path = "../../../../prometheus-data" }
