[package]
name = "sql-sink"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]

[dependencies]
fluvio-model-sql = {path= "../../models/fluvio-model-sql" }
fluvio-connectors-common = { path = "../../common", features = ["sink"]}
fluvio-future = { version = "0.4.1" , features = ["subscriber"]}
fluvio-smartengine = { version = "0.5" }
fluvio-smartmodule = "0.3"
fluvio-spu-schema = { version = "0.10.0", default-features = false }
fluvio = { version = "0.15" }

serde = { version = "1", features = ["derive"], default-features = false}
serde_json = { version = "1", default-features = false }

clap = { version = "3.1", features = ["std", "derive", "env"], default-features = false }
schemars = { version = "0.8", features = ["url"], default-features = false  }
itertools = { version = "0.10", default-features = false }
url = { version = "2.2", default-features = false }
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls" , "postgres", "sqlite", "any", "decimal", "chrono", "uuid" ], default-features = false }
async-std = { version = "1.12",  default-features = false, features = ["attributes"]}
rust_decimal = { version = "1.26", default-features = false }
chrono = { version = "0.4", default-features = false }
uuid = { version = "1.1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std", "io-compat"] }
anyhow = { version = "1.0", default-features = false }
isahc = { version = "1.7", default-features = false }
tar = { version = "0.4", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
httpmock = { version = "0.6", default-features = false }
