[package]
name = "github"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
structopt = "0.3"
dotenv = "0.15"
color-eyre = "0.5"
fluvio = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
fluvio-future = { version = "0.3", features = ["subscriber"] }
