[package]
name = "http"
version = "0.2.1"
description = "A Fluvio connector that fetches data from HTTP endpoints"
edition = "2021"

[[bin]]
name = "http"
path = "src/bin/main.rs"

[dependencies]
tracing = "0.1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = "0.11"
schemars = "0.8"
serde = "1"
serde_json = "1"
thiserror = "1.0"
humantime = "2.1.0"

fluvio-connectors-common = { path = "../../common" }
fluvio-dataplane-protocol = "0.11"
fluvio-future = { version = "0.3.15", features = ["subscriber"] }

[dev-dependencies]
rstest = "0.13"
rstest_reuse = "0.3"
