[package]
name = "http-source"
version = "0.4.0"
description = "A Fluvio connector that fetches data from HTTP endpoints"
edition = "2021"

[[bin]]
name = "http-source"
path = "src/bin/main.rs"

[dependencies]
tracing = "0.1"
clap = { version = "3.1", features = ["std", "derive"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = "0.11"
schemars = "0.8"
serde = "1"
serde_json = "1"
thiserror = "1.0"
humantime = "2.1.0"

fluvio-connectors-common = { path = "../../common", features = ["source"]}
fluvio-dataplane-protocol = "0.11"
fluvio-future = { version = "0.4.1", features = ["subscriber"] }

[dev-dependencies]
rstest = "0.15"
rstest_reuse = "0.4"
