[package]
name = "mqtt-source"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
fluvio-connectors-common = { path = "../../common" }
fluvio-future = { version = "0.4.1", features = ["subscriber", "timer"] }
uuid = { version = "1.1", features = ["v4"] }

thiserror = "1.0.29"
async-global-executor = { version = "2.0.4", features = ["tokio"]}
structopt = "0.3.23"

schemars = "0.8.6"
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"] }
anyhow = "1.0.56"
url = "2.2"
rustls = "0.20.4"
rustls-native-certs = "0.6.1"

rumqttc = { version = "0.14.0", features = ["url", "websocket"] }
