[package]
name = "mqtt-source"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
fluvio-connectors-common = { path = "../../common", features=["source"] }
fluvio-future = { version = "0.4.1", features = ["subscriber", "timer"] }
uuid = { version = "1.1", features = ["v4"] }

thiserror = "1.0.29"
async-global-executor = { version = "2.3.0", features = ["tokio"]}
clap = { version = "3.1", features = ["std", "derive", "env"], default-features = false }

schemars = "0.8.6"
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"] }
anyhow = "1.0.56"
url = "2.2"
rustls = "0.20.4"
rustls-native-certs = "0.6.1"

rumqttc = { version = "0.17", features = ["url", "websocket"] }
