[package]
name = "postgres-source"
version = "0.0.0"
edition = "2021"
[[bin]]
name = "postgres"
path = "src/bin/main.rs"


[dependencies]
tracing = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
fluvio = { version = "0.10" }
fluvio-future = { version = "0.3", features = ["subscriber"] }
fluvio-connectors-common = { path = "../../common" }
fluvio-model-postgres = { path = "../../models/fluvio-model-postgres" }
bytes = "1"
eyre = "0.6"
thiserror = "1"
structopt = "0.3"
dotenv = "0.15"
url = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["url"] }
once_cell = "1"
color-backtrace = { version = "0.5" }

# The upstream rust-postgres project does not yet have support for Logical Replication in Postgres.
# However, there is a fork by Materialize that has added Logical Replication capabilities.
# We forked that fork to ensure it stays up, and these two dependencies belong to that fork.
#
# Materlialize fork of rust-postgres: https://github.com/MaterializeInc/rust-postgres
# Upstream PR for rust-postgres: https://github.com/sfackler/rust-postgres/pull/778
tokio-postgres = { git = "https://github.com/infinyon/rust-postgres", rev = "4e86fffc7e8d4ee10c7751a58398a172a4963bfc" }
postgres-protocol = { git = "https://github.com/infinyon/rust-postgres", rev = "4e86fffc7e8d4ee10c7751a58398a172a4963bfc" }

[dev-dependencies]
fluvio-future = { version = "0.3.0", features = ["fixture"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
