[package]
name = "postgres-source"
version = "0.3.1"
edition = "2021"
[[bin]]
name = "postgres-source"
path = "src/bin/main.rs"


[dependencies]
tracing = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
fluvio-future = { version = "0.4", features = ["subscriber", "timer"] }
fluvio-connectors-common = { path = "../../common", features = ["source"]}
fluvio-model-postgres = { path = "../../models/fluvio-model-postgres" }
bytes = "1"
eyre = "0.6"
thiserror = "1"
clap = { version = "3.1", features = ["std", "derive", "env"], default-features = false }
dotenv = "0.15"
url = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["url"] }
once_cell = "1"
color-backtrace = { version = "0.5" }

# The upstream rust-postgres project does not yet have support for Logical Replication in Postgres.
# However, there is a fork by Materialize that has added Logical Replication capabilities.
# We forked that fork to ensure it stays up, and these two dependencies belong to that fork.
#
# Materlialize fork of rust-postgres: https://github.com/MaterializeInc/rust-postgres
# Upstream PR for rust-postgres: https://github.com/sfackler/rust-postgres/pull/778
#tokio-postgres = { git = "https://github.com/infinyon/rust-postgres", rev = "4e86fffc7e8d4ee10c7751a58398a172a4963bfc" }
#postgres-protocol = { git = "https://github.com/infinyon/rust-postgres", rev = "4e86fffc7e8d4ee10c7751a58398a172a4963bfc" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "mz-0.7.2" }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "mz-0.7.2" }
adaptive_backoff = "0.2.1"
#postgres-protocol = "0.6.3"
#tokio-postgres = "0.7.5"

[dev-dependencies]
fluvio-future = { version = "0.4", features = ["fixture"] }
fluvio = { version = "0.15", default-features = false }
uuid = { version = "1.1", features = ["serde", "v4"] }
