[package]
name = "fluvio-syslog"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syslog_loose = "0.17.0"
structopt = "0.3"
fluvio = "0.15"
thiserror = "1.0.25"
tokio = { version = "1.20.0", features = ["macros", "rt", ] }
notify = "=5.0.0-pre.15"
futures-util = "0.3.15"
cfg-if = "1.0.0"

# Configuration stuff
serde = "1.0.127"
toml = "0.5"
