[package]
name = "connector-run"
version = "0.1.2"
edition = "2021"
description = "Deploy or run locally a connector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1", features = ["std", "derive"], default-features = false }
fluvio-connectors-common = { path = "../../common" }
k8-types = { version = "0.6.0", default-features = false, features = ["app"] }
k8-client = "8.0.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.8.18"
serde_json = { version = "1", default-features = false}
tokio = { version = "1", features = ["full"] }
itertools = { version = "0.10", default-features = false }