[package]
name = "memory-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "*"
jemalloc-ctl = "*"
eyre = "*"
tokio = { version = "1", features = ["full"] }

http-connector = { path = "../../sources/http", package = "http" }
fluvio-connectors-common = { path = "../../common" }
