[package]
name = "test-connector"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", default-features = false, features = ["attributes"] }
fluvio-connectors-common = { path = "../../common" }
fluvio-dataplane-protocol = "0.9.2"

structopt = "0.3.23"
schemars = "0.8.6"
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"] }
anyhow = "1.0.56"
